still trying to fix the overflow

--- a/bftb/style_bftb.css
+++ b/bftb/style_bftb.css
@@ -64,6 +64,7 @@ main {
   margin-top: auto;
   margin-bottom: auto;
   max-width: 760px;
+  width: 100%;
 }
 .landing-textbox {
   margin-right: 20px;
